--- a/Hobbies.html
+++ b/Hobbies.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cardapiosemanal.css">
-    <title>Cardápio Semanal</title>
+    <link rel="stylesheet" href="hobbiesmios.css">
+    <title>ouvir musica e jogar</title>
 </head>
 <body>
     <nav>
@@ -14,16 +14,16 @@
         </div>
         </nav>
     <header class='topo'>
-        <h1>CARDÁPIO SEMANAL</h1>
+        <h1>MIOS HOBBIES</h1>
       </header>
       <main>
         <section>
           <header>
-            <h2>Natação </h2>
+            <h2>jogar videogame </h2>
           </header>
           <div>
-            <h3>Nado Livre</h3>
-            <p>Borboleta </p>
+            <h3>varios jogos</h3>
+            <p>jogos de ps2 </p>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempus facilisis blandit. Sed cursus consequat enim, sed venenatis augue elementum eu.</p>
           </div>
         </section>
