--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <nav>
 
         <div class="logo">
-            <a href="sobremim.html"> Prof. Fernando Zanesco </a>
+            <a href="sobremim.html"> Juh </a>
         </div>
 
         <ul>
-            <li> <a href="index.html"> Home </a> </li>
-            <li> <a href="sobremim.html">Sobre Mim</a> </li>
-            <li> <a href="Hobbies.html">Hobbies</a> </li>
-            <li> <a href="minhas musicas favoritas.html"> Minhas Musicas Favoritas</a> </li>
+            <li> <a href="sobremim.html"> Joy mio </a> </li>
+            <li> <a href="sobremeudogo.html">Sobre Meu dogo</a> </li>
+            <li> <a href="Hobbies.html">Hobbiesmios</a> </li>
+            <li> <a href="minhas musicas favoritas.html"> Musicas </a> </li>
             <li> <a href="cursosevestibular.html"> Cursos e Vestibular </a> </li>
             <li> <a href="#"> Fofocas de Corredor </a> </li>
             <li> <a href="#"> Esportes, Jogos e Competições </a> </li>
@@ -33,11 +33,11 @@
     </nav>
     <section class="banner">
         <div class="texto">
-           <h1 class="titulo">O 2B é o Melhor do Plínio</h1>
-           <h2 class="sub_titulo">usando HTML & CSS puro</h2>
+           <h1 class="titulo">Ola querida pessoa</h1>
+           <h2 class="sub_titulo">é o blogzz</h2>
            <div class="botoes">
-            <button class="n-overlay"><a href="saibamais.html">Saiba Mais</a></button>
-               <button class="n-overlay"><a href="inscrever.html">Inscrever</a></button>
+            <button class="overlay"><a href="saibamais.html">Saiba Mais</a></button>
+               <button class="overlay"><a href="inscrever.html">Inscrever</a></button>
               <button class="overlay"><a href="curioso.html">Você é curioso?</a></button>
            </div>
         </div>
