--- a/sobremim.html
+++ b/sobremim.html
@@ -12,10 +12,8 @@
             <a href="index.html"> Home </a>
         </div>
         </nav>
-    <h1>Nasci em 1976, tenho 2 irmãos mais velhos, criado em um a família tradicional na região metropolitana de Curitiba.
-        Estudei o ensino fundamental e médio em escola pública, segui a carreira militar por 3 anos em um Batalhão de Infantaria. 
-    Sou formado em Tecnico de Segurança do Trabalho, Licenciatura Plena em Matemática e Engenharia Elétrica, pós graduado em Engenharia de Segurança
-do Trabalho, Ergonomia e Meio Ambiente.</h1>
+    <h1>Nasci em 2007, tenho 2 irmãs mais velhas, criada em um a família tradicional na região metropolitana de Curitiba.
+        Estudo o ensino fundamental e médio em escola pública, tenho 2 cachorros e uma tartaruga.</h1>
 
 </body>
 </html>
