--- a/sobremeudogo.html
+++ b/sobremeudogo.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre o Colégio</title>
+    <title>Sobre o meu dog</title>
 </head>
 <body style="background-color: azure;">
-   <h1>O Colégio Estadual Helena Kolody foi fundado em 198....</h1> 
+   <h1>Ele é um york pequenino que gosta de dormir debaixo da coberta nos frios, tem seus meros 6 anos e não brinca muito.</h1> 
 </body>
 </html>
