--- a/Hobbies.html
+++ b/Hobbies.html
@@ -24,7 +24,7 @@
           <div>
             <h3>varios jogos</h3>
             <p>jogos de ps2 </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempus facilisis blandit. Sed cursus consequat enim, sed venenatis augue elementum eu.</p>
+            <p>jogos como Up, mortal kombat, super bombeman, guitar hero e outros.</p>
           </div>
         </section>
         <aside>
