--- a/Hobbies.html
+++ b/Hobbies.html
@@ -29,12 +29,10 @@
         </section>
         <aside>
           <header>
-            <h2>Cabeçalho do Aside</h2>
+            <h2>Ouvir Musicas</h2>
           </header>
           <div>
-            <h3>Texto abaixo do cabeçalho do aside</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempus facilisis blandit. Sed cursus consequat enim, sed venenatis augue elementum eu.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tempus facilisis blandit. Sed cursus consequat enim, sed venenatis augue elementum eu.</p>
+            <h3>Trap, rap, funk, rock, eletronica e outras</h3>
           </div>
         </aside>
       </main>
