--- a/minhas musicas favoritas.html
+++ b/minhas musicas favoritas.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minhas Musicas Favoritas</title>
 </head>
-<body style="background-color: bisque;">
+<body style="background-color: rgb(178, 246, 255);">
     <h1>My playlist do Spotfy</h1>
     <img src="images.jpeg" alt="">
 </body>
-<h1 style="background-color: aqua;">fjyddnj..,.,.,.,</h1>
+<h1 style="background-color: rgb(255, 255, 255);">fjyddnj..,.,.,.,</h1>
 </html>
