--- a/minhas musicas favoritas.html
+++ b/minhas musicas favoritas.html
@@ -9,5 +9,5 @@
     <h1>My playlist do Spotfy</h1>
     <img src="images.jpeg" alt="">
 </body>
-<h1 style="background-color: rgb(255, 255, 255);">revenge, falling donw, save me</h1>
+<h1 style="background-color: rgb(255, 255, 255);">revenge, falling donw, save me....</h1>
 </html>
