--- a/uma vida nada incomum.html
+++ b/uma vida nada incomum.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursos e Vestibular</title>
+    <title>Um pouco de mi vida</title>
 </head>
 <body>
-    <h1>Aqui montaremos uma página com tudo sobre, Cursos e Vestibulares</h1>
+    <h1>Todas as semanas eu acordo cedo para ir ao colégio, volto para casa almoço limpo a casa e vou mexer no celular ou jogar. Nas sextas-feiras eu vou para o terreiro as 08horas da noite onde participo até as meia noite, depois da gira no terreiro eu vou para casa de uns amigos e conversamos sobre qualquer coisa. Nos sabados e domingos eu não costumo fazer muita coisa</h1>
 </body>
 </html>
