--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li> <a href="sobremeudogo.html">Sobre Meu dogo</a> </li>
             <li> <a href="Hobbies.html">Hobbiesmios</a> </li>
             <li> <a href="minhas musicas favoritas.html"> Musicas </a> </li>
-            <li> <a href="cursosevestibular.html"> Cursos e Vestibular </a> </li>
+            <li> <a href="um pouco de mi vida.html"> Mi vida</a> </li>
             <li> <a href="#"> Fofocas de Corredor </a> </li>
             <li> <a href="#"> Esportes, Jogos e Competições </a> </li>
             <li> <a href="#"> Atividades de Contraturno</a> </li>
