--- a/sobremim.html
+++ b/sobremim.html
@@ -13,7 +13,7 @@
         </div>
         </nav>
     <h1>Nasci em 2007, tenho 2 irmãs mais velhas, criada em um a família tradicional na região metropolitana de Curitiba.
-        Estudo o ensino fundamental e médio em escola pública, tenho 2 cachorros e uma tartaruga.</h1>
+        Estudo o ensino médio em escola pública, tenho 2 cachorros e uma tartaruga.</h1>
 
 </body>
 </html>
